# GENTS-HUB

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
AI-Automation-Orchestrator/: pyproject.toml
AI-Automation-Orchestrator/examples/: complete_pipeline.yaml
AI-Automation-Orchestrator/orchestrator/: __init__.py  agent_base.py
AI-Automation-Orchestrator/orchestrator/agents/autogpt/: __init__.py  adapter.py
AI-Automation-Orchestrator/orchestrator/agents/crewai/: __init__.py  adapter.py
AI-Automation-Orchestrator/orchestrator/agents/moneyprinter/: __init__.py  adapter.py
AI-Automation-Orchestrator/orchestrator/agents/openhands/: __init__.py  adapter.py
AI-Automation-Orchestrator/orchestrator/agents/strix/: __init__.py  adapter.py
AI-Automation-Orchestrator/orchestrator/cli/: main.py
AI-Automation-Orchestrator/orchestrator/workflows/: engine.py
examples/: content_creation_workflow.yaml  dev_security_workflow.yaml
orchestrator/: __init__.py  agent_base.py
orchestrator/agents/crewai/: adapter.py
orchestrator/agents/openhands/: adapter.py
orchestrator/cli/: main.py
orchestrator/workflows/: engine.py
scripts/: setup.ps1
